make api-key secret

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,8 +8,8 @@ compatibility_date = "2021-11-15"
 [vars]
 # Get this value from your Upstash account.
 UPSTASH_ENDPOINT = "https://eu1-artistic-bass-33019.upstash.io"
-# This is the value Okta will provide in the `Authorization` header.
-API_KEY = "01FVB9Q788M2TDDPYGDNJ17EE7"
 
 # [secrets]
 # UPSTASH_TOKEN
+# This is the value Okta will provide in the `Authorization` header.
+# API_KEY
